# XnnTransfer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  profile.txt  vcpkg.json  xmake.lua
.github/workflows/: ci.yml
docs/: compiler_requirements.md  overall_structure.md  sender.md  tcp_interactor_migration.md  tcp_interactor_optimization.md
proto/: heartbeat.proto  session.proto  transfer.proto
src/: main.cpp
src/authentication/: authenticator.cpp  authenticator.hpp  profile.cpp  profile.hpp  profile.txt
src/broadcast/: broadcast_manager.cpp  broadcast_manager.hpp  verificator.cpp  verificator.hpp
src/cli/: main.cc  online_list_display.cc  online_list_display.h
src/client/: client.cpp  client.hpp
src/core/: acceptor.cc  acceptor.h  connector.cc  connector.h  executor.cc  executor.h  filesender_manager.cpp  filesender_manager.hpp  manager.cpp  manager.hpp  time_out_guard.h  timer.h
src/discovery/: broadcast.cpp  broadcast.hpp  discovery_handler.h  heartbeat.cc  heartbeat.h  online_list_inspector.cc  online_list_inspector.h
src/receiver/: session.cc  session.h  single_file_receiver.cc  single_file_receiver.h
src/sender/: session.cc  session.h  sessions.cc  single_file_sender.cc  single_file_sender.h
src/server/: receiving_file_info.cpp  receiving_file_info.hpp  server.cpp  server.hpp
src/server_client/: client.cpp  client.h  server.cpp  server.h  session.cpp  session.h
src/transfer/: async_receive.cpp  async_receive.hpp  async_recv.cpp  async_recv.hpp  async_send.cpp  async_send.hpp  async_transfer.cpp  block_trans.cpp  block_trans.hpp  on_connect.cpp  transfer_manager.cpp  transfer_manager.hpp
src/util/: data_block.h  encryption.hpp  hash.cc  hash.h  network.cc  network.h  requests.hpp  settings.cc  settings.h  uuid.h
tests/core/: connection_tests.cc  coroutine_tests.cc  test_timeout.h
tests/discovery/: discovery_integration_tests.cc  heartbeat_tests.cc
(+79 files in other folders)
